# Distribuidos

Entrega 1/fileManager/: CMakeLists.txt  Makefile  clientFileManager.cpp  clientFilemanager  cmake_install.cmake  fileManager_Imp.h  fileManager_Stub.h  filemanager.h  main_fm.cpp  operaciones.h  persona_imp.h  serverFileManager.cpp  serverFilemanager  utils.cpp  utils.h
Entrega 1/multMatrix/: CMakeLists.txt  client_matrix.cpp  main_multMatrix.cpp  matrix_imp.h  matrix_stub.h  multmatrix.cpp  multmatrix.h  operaciones.h  server_matrix.cpp  utils.cpp  utils.h
Entrega 3/Twitter/: schema.sql
Entrega 3/miniTwitter/S3/: Register.html  busqueda.html  login.html  postComment.html  readPostUser.html  readPosts.html
